fix btns spacing

--- a/otoroshi/javascript/src/style/components/_btn.scss
+++ b/otoroshi/javascript/src/style/components/_btn.scss
@@ -22,7 +22,7 @@
 }
 .displayGroupBtn {
   text-align: right;
-  button.btn {
+  .btn {
     margin-left: 5px;
   }
   .btn-danger:focus {
